Add mod function
Cause I always wanted a calculator which can calculate mod

Signed-off-by: absarrahman <raman040635@gmail.com>

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -137,6 +137,7 @@
         android:layout_marginStart="8dp"
         android:minWidth="48dp"
         android:text="NEG"
+        android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/button6"
         app:layout_constraintStart_toEndOf="@+id/buttonMultiply" />
 
@@ -169,6 +170,17 @@
         android:text="/"
         app:layout_constraintBaseline_toBaselineOf="@+id/button9"
         app:layout_constraintStart_toEndOf="@+id/button9" />
+
+    <Button
+        android:id="@+id/buttonMOD"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:minWidth="48dp"
+        android:text="MOD"
+        android:textSize="12sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
+        app:layout_constraintStart_toEndOf="@+id/buttonDivide" />
 
     <Button
         android:id="@+id/buttonPlus"
